remove form width:300px to fix div overflow

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -48,7 +48,6 @@ form{
 	margin-left:auto;
 	margin-right:auto;
 	text-align: center;
-	width:300px;
 }
 
 form input{
